--- a/java/res/values-en/donottranslate-altchars.xml
+++ b/java/res/values-en/donottranslate-altchars.xml
@@ -24,9 +24,9 @@
     <string name="alternates_for_d">đ</string>
     <string name="alternates_for_e">3éèêëē€</string>
     <string name="alternates_for_f">₣</string>
-    <string name="alternates_for_g"></string>
+    <string name="alternates_for_g">ğ</string>
     <string name="alternates_for_h"></string>
-    <string name="alternates_for_i">8íìîïī</string>
+    <string name="alternates_for_i">8ıíìîïī</string>
     <string name="alternates_for_j"></string>
     <string name="alternates_for_k"></string>
     <string name="alternates_for_l">£₤λ</string>
@@ -36,7 +36,7 @@
     <string name="alternates_for_p">0π₱</string>
     <string name="alternates_for_q">1</string>
     <string name="alternates_for_r">4</string>
-    <string name="alternates_for_s">§ßš</string>
+    <string name="alternates_for_s">ş§ßš</string>
     <string name="alternates_for_t">5</string>
     <string name="alternates_for_u">7úùûüū</string>
     <string name="alternates_for_v"></string>
