--- a/java/res/values-en/donottranslate-altchars.xml
+++ b/java/res/values-en/donottranslate-altchars.xml
@@ -26,7 +26,7 @@
     <string name="alternates_for_f">₣</string>
     <string name="alternates_for_g">ğ</string>
     <string name="alternates_for_h"></string>
-    <string name="alternates_for_i">8ıíìîïī</string>
+    <string name="alternates_for_i">8Iıİiíìîïī</string>
     <string name="alternates_for_j"></string>
     <string name="alternates_for_k"></string>
     <string name="alternates_for_l">£₤λ</string>
