--- a/java/res/xml-en/kbd_symbols.xml
+++ b/java/res/xml-en/kbd_symbols.xml
@@ -183,11 +183,12 @@
             android:keyWidth="15%p"
             android:isModifier="true"
             android:keyEdgeFlags="left" />
-        <Key
-            android:codes="@integer/key_settings"
-            android:keyIcon="@drawable/sym_keyboard_settings"
-            android:iconPreview="@drawable/sym_keyboard_feedback_settings"
-            android:isModifier="true" />
+   <Key
+            android:keyLabel="😊"
+            android:keyOutputText="😊"
+            android:keyIcon="@drawable/hint_popup"
+            android:popupKeyboard="@xml/popup_smileys"
+            android:isModifier="true"/>
         <Key
             android:codes="@integer/key_f1"
             android:isModifier="true" />
